Nav Bar added for know

--- a/index.html
+++ b/index.html
@@ -3,11 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
+    <!-- =====BOX ICONS===== -->
+    <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://kit.fontawesome.com/4e59238a8a.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    Hello world , Adding the first commit .
-    Test
-    
+    <!--===== HEADER =====-->
+    <header class="l-header">
+        <nav class="nav bd-grid">
+            <div>
+                <a href="#" class="nav__logo">UT</a>
+            </div>
+            
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list">
+                    <li class="nav__item"><a href="#home" class="nav__link nav-link home active">Home</a></li>
+                    <li class="nav__item"><a href="#about" class="nav__link nav-link about">About</a></li>
+                    <li class="nav__item"><a href="#skills" class="nav__link nav-link skills">Skills</a></li>
+                    <li class="nav__item"><a href="#work" class="nav__link nav-link projects">Projects</a></li>
+                    <li class="nav__item"><a href="#contact" class="nav__link nav-link contact">Contact</a></li>
+                    <li class="nav__item"><a href="#resume" class="nav__link nav-link resume">Resume</a></li>
+
+
+                </ul>
+            </div>
+            <div class="nav__toggle" id="nav-toggle">
+                <i class='bx bx-menu'></i>
+            </div>
+        </nav>
+    </header>
+
+
 </body>
+
+
+ <!--===== SCROLL REVEAL =====-->
+ <script src="https://unpkg.com/scrollreveal"></script>
+
+ <!--===== MAIN JS =====-->
+ <script src="./main.js"></script>
 </html>
