rest the node modules

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
         <!--===== WORK =====-->
         <section class="work section" id="work" id ="projects">
-            <h2 class="section-title">Work</h2>
+            <h2 class="section-title">Projects</h2>
 
             <div class="work__container bd-grid">
                
@@ -213,7 +213,7 @@
                 <div class="work__box">
                     <div class="right_box_work">
                         <a href="" class="work__img">
-                            <img src="assets/img/urban-1.png" alt="">
+                            <img src="" alt="">
                         </a>
                     </div>
                     <div class="left_box_work">
@@ -244,7 +244,7 @@
                 <div class="work__box">
                     <div class="right_box_work">
                         <a href="" class="work__img">
-                            <img src="assets/img/nursary.png" alt="">
+                            <img src="" alt="">
                         </a>
                     </div>
                     <div class="left_box_work">
