--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="home__data" id="resume">
                 <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Utkarash</span><br> Web Designer</h1>
 
-                <a style="cursor:pointer" id="resume2 resume-button-1" class="button">Resume</a>
+                <a style="cursor:pointer" id="resume resume2 resume-button-1" class="button">Resume</a>
             </div>
 
             <div class="home__social">
