--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#home" class="nav__link nav-link home active">Home</a></li>
+                    <li class="nav__item"><a href="#home" class="nav__link nav-link home">Home</a></li>
                     <li class="nav__item"><a href="#about" class="nav__link nav-link about">About</a></li>
                     <li class="nav__item"><a href="#skills" class="nav__link nav-link skills">Skills</a></li>
                     <li class="nav__item"><a href="#projects" class="nav__link nav-link projects">Projects</a></li>
