--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@
               <img width="60%" class="react-activity-calendar" src="https://github-readme-stats.vercel.app/api?username=Utkarash33&show_icons=true&theme=default" />
               <img id="github-streak-stats" id="github-stats-card" width="60%" src="https://github-readme-streak-stats.herokuapp.com/?user=Utkarash33&theme=default" />
             </p>
-            <p align="center"> <img  id="github-top-langs" src="https://github-readme-stats.vercel.app/api/top-langs/?username=anuraghazra&layout=donut" alt="" width="42%"></p>
-            <img   id="github-stats-card"src="" alt="" style="display: none;">
+            <p align="center"> <img  id="github-top-langs" src="https://github-readme-stats.vercel.app/api/top-langs/?username=Utkarash33&layout=donut" alt="" width="42%"></p>
+            <img   id="github-stats-card"src="https://github-readme-streak-stats.herokuapp.com/?user=Utkarash33&theme=default" alt="" style="display: none;">
             <!-- Include the library. -->
             <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
         
