--- a/index.html
+++ b/index.html
@@ -282,10 +282,10 @@
             <p align="left">
             <p align="center" style="width:70%;margin:auto;">
               <img width="60%" class="react-activity-calendar" src="https://github-readme-stats.vercel.app/api?username=Utkarash33&show_icons=true&theme=default" />
-              <img id="github-streak-stats" id="github-stats-card" width="60%" src="https://github-readme-streak-stats.herokuapp.com/?user=Utkarash33&theme=default" />
+              <img  id="github-stats-card github-streak-stats"  width="60%" src="https://github-readme-streak-stats.herokuapp.com/?user=Utkarash33&theme=default" />
             </p>
             <p align="center"> <img  id="github-top-langs" src="https://github-readme-stats.vercel.app/api/top-langs/?username=Utkarash33&layout=donut" alt="" width="42%"></p>
-            <img   id="github-stats-card"src="https://github-readme-streak-stats.herokuapp.com/?user=Utkarash33&theme=default" alt="" style="display: none;">
+            <!-- <img   id="github-stats-card"src="https://github-readme-streak-stats.herokuapp.com/?user=Utkarash33&theme=default" alt="" style="display: none;"> -->
             <!-- Include the library. -->
             <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
         
