--- a/index.html
+++ b/index.html
@@ -281,13 +281,13 @@
             <h2 class="section-title" style="text-align:center;margin-bottom: 80px;margin-top: 50px;">Github Statitics</h2>
             <p align="left">
             <p align="center" style="width:70%;margin:auto;">
-              <img width="60%" class="react-activity-calendar" src="https://github-readme-stats.vercel.app/api?username=Utkarash33&show_icons=true&theme=default" />
-              <img  id="github-stats-card github-streak-stats"  width="60%" src="https://github-readme-streak-stats.herokuapp.com/?user=Utkarash33&theme=default" />
+              <img width="60%" id="github-stats-card" src="https://github-readme-stats.vercel.app/api?username=Utkarash33&show_icons=true&theme=default" />
+              <img id="github-streak-stats"  width="60%" src="https://github-readme-streak-stats.herokuapp.com/?user=Utkarash33&theme=default" />
             </p>
             <p align="center"> <img  id="github-top-langs" src="https://github-readme-stats.vercel.app/api/top-langs/?username=Utkarash33&layout=donut" alt="" width="42%"></p>
-            <!-- <img   id="github-stats-card"src="https://github-readme-streak-stats.herokuapp.com/?user=Utkarash33&theme=default" alt="" style="display: none;"> -->
+            <img   id="github-stats-card"src="https://github-readme-streak-stats.herokuapp.com/?user=Utkarash33&theme=default" alt="" style="display: none;">
             <!-- Include the library. -->
-            <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
+            <script  class="react-activity-calendar"  src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
         
             <!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
             <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css" />
