--- a/index.html
+++ b/index.html
@@ -36,9 +36,13 @@
 
     <main class="l-main">
         <!--===== HOME =====-->
+        <section id="resume">
+            <button id="resume-button-1" class="button" style="display: none;">Resume</button>
+        </section>
         <section id="home" class="home bd-grid">
             <div class="home__data" id="user-detail-name">
                 <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Utkarash</span><br> Web Designer</h1>
+               
                 <a href="#" id="resume-link-2" class="button">Resume</a>
                 <button id="resume-button-2" class="button" style="display: none">Resume</button>
             </div>
@@ -344,7 +348,7 @@
 
 
     </main>
-    <button id="resume-button-1" class="button" style="display: none;">Resume</button>
+    
     <!--===== FOOTER =====-->
     <section id="contact" class="footer" id="footer" >
         <p class="footer__title">Let's do creative</p>
