--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section id="resume">
             <button id="resume-button-1" class="button" style="display: none;">Resume</button>
         </section>
-        <section id="home" class="home bd-grid">
+        <section id="home" class="home section bd-grid">
             <div class="home__data" id="user-detail-name">
                 <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Utkarash</span><br> Web Designer</h1>
                
