--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Utkarash</span><br> Web Designer</h1>
                
                 <a href="#" id="resume-link-2" class="button">Resume</a>
-                <button id="resume-button-2" class="button" style="display: none">Resume</button>
+                <button id="resume-button-2" class="button">Resume</button>
             </div>
 
             <div class="home__social">
