--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section id="home" class="home section bd-grid">
             <div class="home__data" id="user-detail-name">
                 <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Utkarash</span><br> Web Designer</h1>
-                <button id="resume-button-2" class="button">Resume</button>
+                <a href="#" id="resume-link-2" class="button">Resume</a>
             </div>
 
             <div class="home__social">
@@ -65,10 +65,7 @@
         <div>
             <h2 class="about__subtitle" id="user-detail-name">I am Utkarash Thakur</h2>
             <p class="about__text" id="user-detail-intro">Passionate web developer with expertise in SQL, Java programming, and HTML/CSS. Skilled in database management, writing efficient code, and creating visually appealing web interfaces. Committed to delivering high-quality solutions and eager to contribute to challenging projects.</p>
-            <button id="resume-button-2" class="button">Resume</button>
-          
         </div>
-
     </div>
 </section>
 
