nav bar home section try to fix

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main class="l-main">
         <!--===== HOME =====-->
        
-        <section id="home" class="home section">
+        <section id="home" class="home section bd-grid">
             <div class="home__data" id="user-detail-name">
                 <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Utkarash</span><br> Web Designer</h1>
                
