--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                 />
 
                 <!-- Prepare a container for your calendar. -->
-                <div class="calendar">
+                <div class="react-activity-calendar calendar" style="width: 65%;margin-top: 40px;">
                 <!-- Loading stuff -->
                 Loading the data just for you.
                 </div>
