--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <div class="project-card">
                     <div class="right_box_work">
                         <a href="" class="work__img">
-                            <img src="assets/img/traverse.png" alt="">
+                            <img src="assets/img/traverse.png" alt="" >
                         </a>
                     </div>
                     <div class="left_box_work">
@@ -197,7 +197,7 @@
                 <div class="project-card" >
                     <div class="right_box_work">
                         <a href="" class="work__img">
-                            <img src="" alt="">
+                            <img src="/assets/img/Screenshot 2023-08-22 123938.png" alt="">
                         </a>
                     </div>
                     <div class="left_box_work">
@@ -224,20 +224,19 @@
                 <div  class="project-card" >
                         <div class="right_box_work">
                             <a href="" class="work__img">
-                                <img src="" alt="">
+                                <img src="/assets/img/fastkar.png" alt="">
                             </a>
                         </div>
                         <div class="left_box_work">
                             <div class="work_project_name">
-                                <h2 class="project-heading project-title">ShowTime Central</h2>
+                                <h2 class="project-heading project-title">Car Rental System</h2>
                             </div>
-                            <p class="project-para project-description">Objective of this application is to manage all the record of the events,
-                                Organizers and provide a interface for users to book different events.</p>
+                            <p class="project-para project-description">Develop a Java-based Car Rental System to facilitate customers in searching, reserving, modifying, and canceling car reservations, while also providing administrative tools for car and customer management, as well as generating usage and revenue reports.</p>
                             <a  class="project-github-link" style="display:inline-block;margin-right: 20px;"
-                                href="https://github.com/Utkarash33/precious-plate-5541" target="_blank">Code<i
+                                href="https://github.com/Utkarash33/pleasant-summer-812" target="_blank">Code<i
                                     class="fa-brands fa-github" style="display: block-inline;margin-left:5px"></i></a>
                             <a class="project-deployed-link" style="display:inline-block;margin-right: 20px;"
-                                href="https://drive.google.com/file/d/1ir_4FHIG1CbxZtCiikU77cLWPK4MuTpJ/view?usp=sharing" target="_blank">Live<i
+                                href="https://drive.google.com/file/d/1CqFE3W7jJLNVlzmGRvNG2ap38vogHG-a/view?usp=sharing" target="_blank">Live<i
                                     class="fa-solid fa-square-arrow-up-right" style="display: block-inline;margin-left:5px"></i></a>
                             <div class="project-tech-stack">
                                 <p class="button_tool project-para" style="font-size: 12px;margin-top: 10px;">JAVA
