Working on the feedback

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <div  class="project-card" >
                         <div class="right_box_work">
                             <a href="" class="work__img">
-                                <img src="/assets/img/fastkar.png" alt="">
+                                <img src="/assets/img/fastkar222.png" alt="">
                             </a>
                         </div>
                         <div class="left_box_work">
@@ -256,7 +256,7 @@
                 <div   class="project-card"  >
                     <div class="right_box_work">
                         <a href="" class="work__img">
-                            <img src="" alt="">
+                            <img src="./assets/img/Screenshot 2023-09-18 102437.png" alt="">
                         </a>
                     </div>
                     <div class="left_box_work">
