--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <p align="left">
             <p align="center" style="width:70%;margin:auto;">
               <img width="60%" id="github-stats-card" src="https://github-readme-stats.vercel.app/api?username=Utkarash33&show_icons=true&theme=default" />
-              <img id="github-streak-stats"  width="60%" src="https://github-readme-streak-stats.herokuapp.com/?user=Utkarash33&theme=default" />
+              <img id="github-streak-stats"  width="60%" src="https://github-readme-streak-stats.herokuapp.com?user=Utkarash33 " alt="https://github-readme-streak-stats.herokuapp.com?user=Utkarash33" />
             </p>
             <p align="center"> <img  id="github-top-langs" src="https://github-readme-stats.vercel.app/api/top-langs/?username=Utkarash33&layout=donut" alt="" width="42%" ></p>
             
