update the summary and the tech stack

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <div>
             <h2 class="about__subtitle" id="user-detail-name">I am Utkarash Thakur</h2>
-            <p class="about__text" id="user-detail-intro">Passionate web developer with expertise in SQL, Java programming, and HTML/CSS. Skilled in database management, writing efficient code, and creating visually appealing web interfaces. Committed to delivering high-quality solutions and eager to contribute to challenging projects.</p>
+            <p class="about__text" id="user-detail-intro">Passionate and resourceful full-stack web developer showcasing expertise in SQL, Java programming, and HTML/CSS. Proficient in database management, code optimization, and crafting visually engaging web interfaces. Committed to delivering high-quality solutions, adept at quickly mastering new technologies, including Generative AI, to contribute effectively to challenging projects.</p>
         </div>
     </div>
 </section>
@@ -137,7 +137,15 @@
                         </div>
                         <div class="skills__bar skills__java"></div>
                     </div>
+                    <div class="skills__data skills-card">
+                        <div class="skills-card-name skills__names">
+                          <img src="./assets/img/openai-icon.svg" alt="" class="skills__icon" width="6%">
+                            <span class="skills__name skills__name">GenerativeAI</span>
+                        </div>
+                        <div class="skills__bar skills__java"></div>
+                    </div>
                 </div>
+                
                 <div>
                     <h2 class="skills__subtitle">Tech Tools</h2>
                     <p class="skills__text">Hand of good experience with tech tools</p>
