fix the discription for the projects

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <div class="work_project_name">
                             <h2 class="project-heading project-title ">Traverse Travel Website</h2>
                         </div>
-                        <p class="project-para project-description">A Holiday booking webiste where user can book different holiday destinations...
+                        <p class="project-para project-description">Traverse Travel Website offers users an intuitive platform for exploring and booking holiday destinations. With interactive filtering, a seamless booking process, and a secure payment system, users can effortlessly plan and track their travel experiences. 
                         </p>
                         <a class="project-github-link" style="display:inline-block;margin-right: 20px;"
                             href="https://github.com/Utkarash33/frail-show-474" target="_blank">Code<i
@@ -223,7 +223,8 @@
                         <div class="work_project_name">
                             <h2 class="project-heading project-title">ShowTime Central</h2>
                         </div>
-                        <p class="project-para project-description">Show application on which inspired for the bookmyshow platfrom on with user can book the tickets for different shows</p>
+                        <p class="project-para project-description">
+                            ShowTime Central simplifies event discovery and booking, offering customers an easy-to-use platform to browse, book, and manage events. Event organizers benefit from streamlined event management, while administrators ensure system security and smooth operations. Enjoy a hassle-free event booking experience with ShowTime Central.</p>
                         <a  class="project-github-link" style="display:inline-block;margin-right: 20px;"
                             href="https://github.com/Utkarash33/precious-plate-5541" target="_blank">Code<i
                                 class="fa-brands fa-github" style="display: block-inline;margin-left:5px"></i></a>
