--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
        
         <section id="home" class="home section bd-grid">
             <div class="home__data" id="user-detail-name">
-                <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Utkarash</span><br> Web Designer</h1>
+                <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">Utkarash</span><br> Java Bankend Developer</h1>
                
                 <!-- <a href="https://drive.google.com/uc?id=1wsIkYOtQDPosKaJSgCdIqgqOMdNi8xPl&export=download" id="resume-button-2" class="button">Resume</a> -->
                 <button id="resume-button-2" class="button">Resume</button>
