--- a/index.html
+++ b/index.html
@@ -381,10 +381,9 @@
             <a id="contact-github" href="https://github.com/Utkarash33" target="_blank" class="footer__icon"><i
                     class='bx bxl-github'></i></a>
 
-            <a id="contact-email" href="mailto:atulthakur3303@gmail.com"
+            <a id="contact-email" href="mailto:utkarash3319@gmail.com"
                 target="_blank" class="footer__icon"><i class="fa-solid fa-envelope"></i>
             </a>
-            <p id="contact-phone" style="margin-top: 30px;">+91 8580404902</p>
             
         </div>
         <p class="footer__copy">&#169; Created by Utkarash</p>
